# mlops-starting

./: .gitignore  MLflow_AWS_Setup.md  main.py  pyproject.toml
data/: data.txt  data.txt.dvc
notebooks/: deep_learning_mlflow.ipynb  get_started_mlflow.ipynb  house_price_predictions.ipynb
src/: mlflow_AWS.py
