[project]
name = "mlops-fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.7",
    "dvc>=3.61.0",
    "hyperopt>=0.2.7",
    "ipykernel>=6.30.1",
    "keras>=3.11.1",
    "mlflow>=3.2.0",
    "numpy>=2.1.3",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "tensorflow>=2.19.0",
]
